# ventd

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Makefile  README.md  SECURITY.md  TESTING.md  cliff.toml  config.example.yaml  ghost-code  go.mod  go.sum  install.sh  ventd-daily-rules.md  ventdmasterplan.md  ventdtestmasterplan.md
.claude/: RULE-INDEX.md  settings.json
.cowork/: ACK.md  BRIDGE-PHASE1-RESUME.md  ESCALATIONS.md  FEATURE-IDEAS.md  HOWTO-START-CC.md  LESSONS.md  NEXT-SESSION.md  README.md  RELEASE-PLAN.md  STRATEGY.md  TESTING.md  THROUGHPUT.md  ULTRAREVIEW.md  aliases.yaml  events.jsonl  state.yaml  ventdmasterplan.mkd  ventdtestmasterplan.mkd
.cowork/tools/spawn-mcp/: INSTALL.md  README.md  pyproject.toml  server.py  spawn-mcp-tunnel.service  spawn-mcp.service  sudoers.d-spawn-mcp
.github/: FUNDING.yml  dependabot.yml  drift-baseline.json  drift-thresholds.yaml  flaky-tests.yaml  labeler.yml  pull_request_template.md
deploy/: 50-ventd-update.rules  90-ventd-hwmon.rules  90-ventd-liquid.rules  README.md  github-mcp.service  install-contract_test.go  mcp-t11-deploy.md  postreboot-verify.sh  setup_unit_test.go  sysusers.d-ventd.conf  tmpfiles.d-ventd.conf  ventd-ipmi.service  ventd-postreboot-verify.service  ventd-recover.service  ventd-setup.service  ventd.service
infra/ops-mcp/: INSTALL.md  install.sh  ops-mcp-tunnel.service  ops-mcp.service  ops-mcp.sudoers  pyproject.toml  server.py  smoke.sh  test_server.py
infra/ops-mcp/logrotate.d/: ops-mcp
(+2113 files in other folders)
