[project]
name = "ops-mcp"
version = "0.1.0"
description = "MCP server exposing scoped host operations on phoenix-desktop"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
