[project]
name = "spawn-mcp"
version = "0.1.0"
description = "MCP server to spawn Claude Code sessions on phoenix-desktop"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.3.0",
]

[project.scripts]
spawn-mcp = "server:mcp.run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
